# py-pid

./: .buildinfo  .gitignore  .readthedocs.yaml  README.md  development.html  examples.html  genindex.html  index.html  introduction.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
_sources/: development.rst.txt  modules.rst.txt
docs/: conf.py  index.rst  modules.rst  usage.rst
docs/_build/doctrees/: api.doctree  development.doctree  environment.pickle  examples.doctree  index.doctree  introduction.doctree  usage.doctree
docs/_build/html/: api.html  index.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/py_pidx/: controller.html
install/: deploy_docs.sh  publish.sh
sw/: pyproject.toml  setup.py
sw/py_pidx/: controller.py
