[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Py-PID"
version = "0.0.1"
description = "Py-PID: A simple Python package for PID control."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name="Mehrab Mahdian", email="memahdian@outlook.com" }
]
dependencies = []

[project.urls]
Homepage = "https://github.com/mehrabmahdian/pi-pid"
